# binstra

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  config_optimal.toml
backtest-data/: btc_prices_10d.json  btc_prices_180d.json  btc_prices_30d.json  btc_prices_365d.json  btc_prices_7d.json  btc_prices_90d.json  fear_greed_10d.json  fear_greed_180d.json  fear_greed_1d.json  fear_greed_30d.json  fear_greed_365d.json  fear_greed_7d.json  fear_greed_90d.json
backtest-scripts/: fetch_historical_data.py  fetch_historical_data_binance.py
src/: backtest.rs  basket.rs  bot.rs  config.rs  exchange.rs  fear_greed.rs  main.rs  state.rs
src/exchange/: mock.rs  okx.rs
