[package]
name = "binstra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }
async-trait = "0.1"
